1-routes/alpha.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-alpha 
  namespace: mesh-example 
spec:
  parentRefs:
    - name: api-gateway-istio
      namespace: mesh-example
  hostnames:
    - alpha.staging.telematicsplatform.tools
  rules:
    # /* is routed to the alpha service
    - matches:
        - path:
            value: /
            type: PathPrefix
      backendRefs:
        - name: alpha 
          port: 8080
